# PPGSO

./: .gitattributes  CMakeLists.txt  README.md
data/blinds/: license.txt  scene.gltf
data/book/: book.mtl  obal.mtl
data/cactus/: scene.gltf
data/cactus (1)/: license.txt
data/chair/: Office_chair.mtl
data/cupboard/: license.txt  scene.gltf
data/cupboard2/: license.txt  scene.gltf
data/diff_chair/: chair.mtl
data/glass_cup/: scene.gltf
data/lamp/: lampa.mtl
data/laptop/: laptop.mtl  license.txt  scene.gltf
data/laptop4/: laptop.mtl
data/okno/: okno.mtl
data/plane/: plane.mtl
data/room/: room.mtl
data/room2/: room.mtl
data/room4/: room.mtl
data/roomba/: roomba.mtl
data/skybox/: skybox.mtl
data/table_lamp/: license.txt
data/teddy_bear/: scene.gltf
data/testpack/: backpack.mtl
data/wooden_shelf/: license.txt
data/zaves/: cast2.mtl
ppgso/: shader.cpp  shader.h
shader/: color_vert.glsl  cubemap_geo.glsl  ddebug_frag.glsl  depth_vert.glsl  diffuse_frag.glsl  diffuse_vert.glsl  instance_vert.glsl  light_frag.glsl  light_vert.glsl
src/: Object.h  apartman.cpp  camera.h  main.cpp  scene.h
src/project/: anicam.h  apartman.cpp  axis.h  camera.h  chair.h  imgloader.cpp  imgloader.h  mesh.h  model.h  object.h  scene.cpp  scene.h  skybox.h  test_backpack.h
src/project/models/: animated.h  chair.h  instance.h  lamp.h  laptop.h  obal.h  plane.h  room.h  roomba.h  snowflake.h  static.h  test_backpack.h  zaves_spod.h
src/project/shader/: gshader.h
